--- a/package.json
+++ b/package.json
@@ -1,8 +1,22 @@
 {
+  "name": "notificador",
+  "version": "1.0.0",
+  "description": "Microservicio de envío de emails usando SendGrid",
+  "main": "index.js",
+  "scripts": {
+    "start": "node index.js",
+    "dev": "node index.js"
+  },
+  "engines": {
+    "node": ">=16.0.0"
+  },
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
     "express": "^4.18.2"
-  }
+  },
+  "keywords": ["email", "sendgrid", "microservice", "notifications"],
+  "author": "Greenborn",
+  "license": "MIT"
 }
