--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "notificador",
   "version": "1.1.0",
-  "description": "Microservicio de envío de emails usando SendGrid",
+  "description": "Microservicio de envío de emails usando SendGrid y mensajes a grupos de Telegram",
   "main": "index.js",
   "scripts": {
     "start": "node index.js",
@@ -12,11 +12,20 @@
   },
   "dependencies": {
     "@sendgrid/mail": "^8.1.0",
+    "axios": "^1.10.0",
     "body-parser": "^1.20.2",
     "dotenv": "^16.3.1",
-    "express": "^4.18.2"
+    "express": "^4.18.2",
+    "node-telegram-bot-api": "^0.66.0"
   },
-  "keywords": ["email", "sendgrid", "microservice", "notifications"],
+  "keywords": [
+    "email",
+    "sendgrid",
+    "telegram",
+    "bot",
+    "microservice",
+    "notifications"
+  ],
   "author": "Greenborn",
   "license": "MIT"
 }
