feat: rate limit por IP y por hora configurable en /telegram (TELEGRAM_RATE_LIMIT) y documentación actualizada

--- a/env.example
+++ b/env.example
@@ -11,3 +11,5 @@ TELEGRAM_BOT_ALERTAS_TOKEN=123456:ABCDEF
 TELEGRAM_ALERTAS_CHAT_ID=-123456789
 TELEGRAM_BOT_SOPORTE_TOKEN=987654:ZYXWVU
 TELEGRAM_SOPORTE_CHAT_ID=-987654321 
+# Límite de mensajes por IP para /telegram (por hora)
+TELEGRAM_RATE_LIMIT=5 
