feat: autenticación por token en /telegram (TELEGRAM_API_TOKEN) y documentación actualizada

--- a/env.example
+++ b/env.example
@@ -13,3 +13,7 @@ TELEGRAM_BOT_SOPORTE_TOKEN=987654:ZYXWVU
 TELEGRAM_SOPORTE_CHAT_ID=-987654321 
 # Límite de mensajes por IP para /telegram (por hora)
 TELEGRAM_RATE_LIMIT=5 
+# Token de autenticación para el endpoint /email
+EMAIL_API_TOKEN=mi_token_secreto 
+# Token de autenticación para el endpoint /telegram
+TELEGRAM_API_TOKEN=mi_token_telegram 
