feat: configuración de CORS usando variable CORS_ORIGINS en .env

--- a/env.example
+++ b/env.example
@@ -17,3 +17,5 @@ TELEGRAM_RATE_LIMIT=5
 EMAIL_API_TOKEN=mi_token_secreto 
 # Token de autenticación para el endpoint /telegram
 TELEGRAM_API_TOKEN=mi_token_telegram 
+# Orígenes permitidos para CORS (separados por coma, por ejemplo: http://localhost:3000,http://midominio.com)
+CORS_ORIGINS=* 
