--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
+    "cors": "^2.8.5",
     "node-fetch": "^3.3.2",
     "node-telegram-bot-api": "^0.66.0"
   },
