--- a/env.example
+++ b/env.example
@@ -19,3 +19,5 @@ EMAIL_API_TOKEN=mi_token_secreto
 TELEGRAM_API_TOKEN=mi_token_telegram 
 # Orígenes permitidos para CORS (separados por coma, por ejemplo: http://localhost:3000,http://midominio.com)
 CORS_ORIGINS=* 
+# Intervalo de envío de mensajes de Telegram (en milisegundos)
+TELEGRAM_SEND_INTERVAL_MS=1000 
