docs: agregar SERVER_URL opcional en .env para pruebas con scripts

--- a/env.example
+++ b/env.example
@@ -21,3 +21,5 @@ TELEGRAM_API_TOKEN=mi_token_telegram
 CORS_ORIGINS=* 
 # Intervalo de envío de mensajes de Telegram (en milisegundos)
 TELEGRAM_SEND_INTERVAL_MS=1000 
+# URL pública del endpoint (opcional, para pruebas desde scripts)
+# SERVER_URL=https://notificador.midominio.com 
