feat: soporte para PROVEEDOR_EMAIL (sendgrid/nodemailer) y ejemplo de configuración SMTP para Postfix local

--- a/env.example
+++ b/env.example
@@ -1,8 +1,19 @@
 # Configuración del servidor
 PUERTO=3000
 
-# Configuración de SendGrid para emails
+
+# Proveedor de email: sendgrid o nodemailer
+PROVEEDOR_EMAIL=sendgrid
+
+# Configuración de SendGrid para emails (si usas SendGrid)
 SENDGRID_API_KEY=tu_api_key_de_sendgrid
+
+# Configuración de SMTP para emails (si usas nodemailer)
+# SMTP_HOST=smtp.tu-servidor.com
+# SMTP_PORT=587
+# SMTP_SECURE=false
+# SMTP_USER=usuario@dominio.com
+# SMTP_PASS=tu_contraseña
 
 # Configuración de bots de Telegram
 # Formato: TELEGRAM_BOT_[ALIAS]_TOKEN=token_del_bot
