--- a/package.json
+++ b/package.json
@@ -14,12 +14,13 @@
     "@sendgrid/mail": "^8.1.0",
     "axios": "^1.11.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^6.7.0",
-    "cors": "^2.8.5",
     "node-fetch": "^3.3.2",
-    "node-telegram-bot-api": "^0.66.0"
+    "node-telegram-bot-api": "^0.66.0",
+    "nodemailer": "^7.0.5"
   },
   "keywords": [
     "email",
