feat: conector SMTP local y listener SMTP simulado con pruebas y logeo

--- a/env.example
+++ b/env.example
@@ -5,6 +5,13 @@ PUERTO=3000
 # Proveedor de email: sendgrid o nodemailer
 PROVEEDOR_EMAIL=sendgrid
 
+# Configuración del servidor SMTP local (simulado)
+# Este servidor recibirá emails de otros servicios y los reenviará usando el proveedor definido en PROVEEDOR_EMAIL
+SMTP_LISTEN_HOST=0.0.0.0
+SMTP_LISTEN_PORT=2525
+SMTP_LISTEN_USER=usuario_local
+SMTP_LISTEN_PASS=contraseña_local
+
 # Configuración de SendGrid para emails (si usas SendGrid)
 SENDGRID_API_KEY=tu_api_key_de_sendgrid
 
